Fix styles of tags so they wrap better
git-svn-id: http://svn.winnow.peerworks.org/trunk/winnow@2967 f9e11ea3-fe04-0410-b62f-af45e3a9b5a1

--- a/public/stylesheets/winnow.css
+++ b/public/stylesheets/winnow.css
@@ -560,7 +560,7 @@ a.editor_cancel {
   float: left;
   margin-left: 20px;
   width: 17%;
-  height: 1.8em;
+  height: 1.7em;
   overflow: hidden;
   color: #999;
 }
@@ -568,7 +568,7 @@ a.editor_cancel {
 .item .closed .title {
   float: left;
   margin-left: 20px;
-  height: 1.8em;
+  height: 1.7em;
   overflow: hidden;
   text-align: left;
   font-weight: bold;
@@ -582,17 +582,20 @@ a.editor_cancel {
 .item .closed .date {
   float: right;
   margin-right: 2px;
+  height: 1.7em;
   color: #666;
 }
 
 .item .closed .add_tag {
   float: right;
+  height: 1.7em;
   margin: 0 .5em;
 }
 
 .item .closed .tag_list {
   text-align: right;
   height: 1.8em;
+  margin-right: 5px;
 }
 
 .item.selected .closed .tag_list {
